--- a/src/p.tex
+++ b/src/p.tex
@@ -3011,10 +3011,12 @@ $n$次単位行列のみであるので,
   $(m,n)$-行列$A$に対し,
   行基本変形と列基本変形を用いることで,
   \begin{align*}
+    \left(
     \begin{array}{c|c}
-      E_r&O_{r,n-r}\\
+      E_r&O_{r,n-r}\\\hline
       O_{m-r,r}&O_{m-r,n-r}
     \end{array}
+    \right)
   \end{align*}
   という形に変形できる.
   このとき, $r=\rank(A)$となる.
