--- a/src/x2.tex
+++ b/src/x2.tex
@@ -173,6 +173,7 @@
 \newcommand{\HHH}{\mathcal{H}}
 \newcommand{\SSS}{\mathcal{S}}
 \newcommand{\OOO}{\mathcal{O}}
+\newcommand{\KKK}{\mathcal{K}}
 
 % caligraphic capital
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
