--- a/src/p.tex
+++ b/src/p.tex
@@ -4316,7 +4316,7 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
 \begin{quiz}
   \solvelater{quiz:3:2}
   \label{quiz:3:2}
-  \seealsoQuiz{quiz:2:4,quiz:3:1}
+  \seealsoQuiz{quiz:3:1}
   \Seealsoquiz{quiz:3:4x}
   次の連立一次方程式
   \begin{align*}
@@ -4330,13 +4330,14 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
     \item この連立一次方程式の係数行列を答えよ.
     \item この連立一次方程式の拡大係数行列を答えよ.
     \item この連立一次方程式を解け.
+      つまり, 解の空間$\FFF$を求めよ.
   \end{enumerate}
 \end{quiz}
 
 \begin{quiz}
   \solvelater{quiz:3:3}
   \label{quiz:3:3}
-  \seealsoQuiz{quiz:3:1,quiz:2:reg:1}
+  \seealsoQuiz{quiz:3:1}
   \Seealsoquiz{quiz:3:4}
   連立一次方程式
   \begin{align*}
@@ -4345,13 +4346,13 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
       =
       \begin{pmatrix}2\\-2\end{pmatrix}
   \end{align*}
-  の実数解を求めよ.
+  の実数解の空間$\FFF$を求めよ.
 \end{quiz}
 
 \begin{quiz}
   \solvelater{quiz:3:3x}
   \label{quiz:3:3x}
-  \seealsoQuiz{quiz:3:1,quiz:2:reg:1}
+  \seealsoQuiz{quiz:3:1}
   \Seealsoquiz{quiz:3:4}
 
   連立一次方程式
@@ -4361,50 +4362,9 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
       =
       \begin{pmatrix}2\\2\end{pmatrix}
   \end{align*}
-  の実数解を求めよ.
+  の実数解の空間$\FFF$を求めよ.
 \end{quiz}
 
-\begin{quiz}
-  \solvelater{quiz:3:4}
-  \seealsoQuiz{quiz:3:3,quiz:3:3x}
-  \Seealsoquiz{quiz:5:2}
-  \label{quiz:3:4}
-  連立一次方程式
-  \begin{align*}
-    \begin{pmatrix}-5&1\\5&-1\end{pmatrix}
-    \begin{pmatrix}x\\y\end{pmatrix}
-      =
-      \begin{pmatrix}a\\b\end{pmatrix}
-  \end{align*}
-  が解を持つための$a,b$に対する条件を求めよ.
-\end{quiz}
-
-\begin{quiz}
-  \solvelater{quiz:3:4x}
-  \seealsoQuiz{quiz:3:2}
-  \Seealsoquiz{quiz:5:2}
-  \label{quiz:3:4x}
-  連立一次方程式
-  \begin{align*}
-    \begin{pmatrix}2&1\\5&6\end{pmatrix}
-    \begin{pmatrix}x\\y\end{pmatrix}
-      =
-      \begin{pmatrix}a\\b\end{pmatrix}
-  \end{align*}
-  が解を持つための$a,b$に対する条件を求めよ.
-\end{quiz}
-
-\begin{quiz}
-  \solvelater{quiz:3:5}
-  連立一次方程式
-  \begin{align*}
-    \begin{pmatrix}-5&1\\5&a\end{pmatrix}
-    \begin{pmatrix}x\\y\end{pmatrix}
-      =
-      \begin{pmatrix}2\\b\end{pmatrix}
-  \end{align*}
-  が解を持つための$a,b$に対する条件を求めよ.
-\end{quiz}
 
 \begin{quiz}
   \solvelater{quiz:3:8}
@@ -4417,7 +4377,7 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
       =\zzero
   \end{align*}
   の
-  実数解をもとめよ.
+  実数解の空間$\FFF$をもとめよ.
 \end{quiz}
 
 \begin{quiz}
@@ -4431,7 +4391,7 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
       =\zzero
   \end{align*}
   の
-  実数解をもとめよ.
+  実数解の空間$\FFF$をもとめよ.
 \end{quiz}
 
 \begin{quiz}
@@ -4445,7 +4405,7 @@ $\Set{\zzero_n}\subsetneq\KKK$であるとき,
       =\zzero
   \end{align*}
   の
-  実数解をもとめよ.
+  実数解の空間$\FFF$をもとめよ.
 \end{quiz}
 
 
@@ -4931,7 +4891,47 @@ $\rank(A)<m$なら,
 
 
 \sectionX{章末問題}
+\begin{quiz}
+  \solvelater{quiz:3:4}
+  \seealsoQuiz{quiz:3:3,quiz:3:3x}
+  \Seealsoquiz{quiz:5:2}
+  \label{quiz:3:4}
+  連立一次方程式
+  \begin{align*}
+    \begin{pmatrix}-5&1\\5&-1\end{pmatrix}
+    \begin{pmatrix}x\\y\end{pmatrix}
+      =
+      \begin{pmatrix}a\\b\end{pmatrix}
+  \end{align*}
+  が解を持つための$a,b$に対する条件を求めよ.
+\end{quiz}
 
+\begin{quiz}
+  \solvelater{quiz:3:4x}
+  \seealsoQuiz{quiz:3:2}
+  \Seealsoquiz{quiz:5:2}
+  \label{quiz:3:4x}
+  連立一次方程式
+  \begin{align*}
+    \begin{pmatrix}2&1\\5&6\end{pmatrix}
+    \begin{pmatrix}x\\y\end{pmatrix}
+      =
+      \begin{pmatrix}a\\b\end{pmatrix}
+  \end{align*}
+  が解を持つための$a,b$に対する条件を求めよ.
+\end{quiz}
+
+\begin{quiz}
+  \solvelater{quiz:3:5}
+  連立一次方程式
+  \begin{align*}
+    \begin{pmatrix}-5&1\\5&a\end{pmatrix}
+    \begin{pmatrix}x\\y\end{pmatrix}
+      =
+      \begin{pmatrix}2\\b\end{pmatrix}
+  \end{align*}
+  が解を持つための$a,b$に対する条件を求めよ.
+\end{quiz}
 
 \begin{quiz}
   \solvelater{quiz:3:6}
@@ -4949,6 +4949,7 @@ $\rank(A)<m$なら,
   以外の
   解を持つための$a$に対する条件を求めよ.
 \end{quiz}
+
 
 
 \begin{quiz}
