--- a/src/a.tex
+++ b/src/a.tex
@@ -1569,7 +1569,7 @@ $A$は正則である.
   $\rank(PA)= \rank(A)$である.
 \end{proofof*}
 
-
+\endinput
 \section{連立一次方程式に関する命題の証明}
 \begin{proofof}{lem:subsol}
 $A'=CA$, $\bbb'=C\bbb$とし,
